--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Brand Mark -->
         <a class="navbar-brand" href="#">
-            <img src="./favicon.ico" width="30" height="30" alt="">
+            <img src="./favicon.ico" width="40" height="40" class="d-inline-block align-top" alt="">
         </a>
 
         <!-- Compatibility menu -->
