--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </nav>
     
         <!-- Floating Button -->
-        <a href="javascript:void(0);">
+        <a href="javascript:void(0);" onclick="showInfo()" data-toggle="tooltip" title="This page's info">
             <div class="fab fas noSelect"></div>
         </a>
     </div>
